Revision history for Rose-DBx-Object-Renderer

0.75    13/12/2010
        Added the 'objects' parameter to render_as_table().
        Keep track of query params for filtered columns in render_as_table().
        Updated POD.
0.74    17/11/2010
        Updated default CSS.
        Fixed a bug related to hiding the output of render_as_table() via query param.
        Fixed the logic for checking if the auto generated Rose object base class is loaded already.
        Fixed a bug where the 'time' and 'date' column values cannot be emptied in render_as_form().
        Added the 'searchable => 1' support to render_as_table(), and render_as_menu().
        Improved 'class_prefix' generation for SQLite.
        Fixed a bug in render_as_table() when including non-character based columns from SQLite in keyword searches.
        Updated the column definitions for 'date', 'datetime' to allow editing and searching in YYYY-MM-DD.
        Updated the regular expression validation for file-related columns.
        Updated the 'for_view' method for the 'money' column definition.
        Minor UI updates to render_as_table() and to the default 'table.tt'.
        Relaxed the default validation regular expression in the 'image' column definition.
        Added the 'template_options' option to render_as_form() and allowed global template options in the default config.
        Added the 'cascade' option to 'table' and 'menu' option into the default config.
        Added the alias 'web' to the 'url' column definition.
        Add the 'query' parameter to all rendering methods to specify the CGI query object.
        RENAMED the 'inherit_form_options' option (introduced in 0.68) to 'form_options' in the default config. 
        Added the 'preload="none"' HTML5 attribute to the 'audio' and 'video' for view methods.
        Added the ability to remove uploaded files in render_as_form().