@@ -1,5 +1,7 @@
 package Rose::DBx::Object::Renderer;
 use strict;
+use warnings;
+no warnings 'uninitialized';
 use Exporter 'import';
 
 use base qw(Rose::Object);
@@ -22,7 +24,7 @@ use Digest::MD5 ();
 use Scalar::Util ();
 
 our $VERSION = 0.75;
-# 243.63
+# 245.63
 
 sub _config {
 	my $config = {
@@ -882,11 +884,11 @@ sub render_as_table {
 			if (defined $args{q}) {
 				$q = $args{q};
 			}
-			elsif (length $query->param($param_list->{'q'})) {
+			else {
 				$q = $query->param($param_list->{'q'});
 			}
 
-			if (defined $q) {
+			if (length $q) {
 				my ($or, @raw_qs, @qs);
 				my $keyword_delimiter = $table_config->{keyword_delimiter};
 				if ($keyword_delimiter) {
@@ -1007,6 +1009,7 @@ sub render_as_table {
 
 		unless (exists $args{get} && (exists $args{get}->{limit} || exists $args{get}->{offset})) {
 			$args{get}->{per_page} ||= $query->param($param_list->{'per_page'}) || $table_config->{per_page};
+			$args{queries}->{$param_list->{per_page}} ||= $query->param($param_list->{'per_page'});
 			$args{get}->{page} ||= $query->param($param_list->{'page'}) || 1;
 		}
 		$objects = $self->get_objects(%{$args{get}});
@@ -1318,7 +1321,6 @@ sub render_as_table {
 			});
 		}
 		else {
-
 			$html_table .= '<div>';
 			$html_table .= qq(<div class="block"><form action="$url" method="get" id="$table_id\_search_form"><input type="text" name="$param_list->{q}" id="$table_id\_search" value="$q" placeholder="Search"/>$query_hidden_fields</form></div>) if $args{searchable};
 			$html_table .= qq(<h1>$table_title</h1>);
